--- a/miniproject/package.json
+++ b/miniproject/package.json
@@ -8,13 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.9",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.6.5",
+    "graphql": "^15.8.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.14",
+    "vue-apollo": "^3.1.0",
     "vue-router": "^3.2.0",
+    "vue-toast-notification": "^0.5.4",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
